# namegen

./: .gitignore  LICENSE  README.md  requirements_dev.txt  setup.cfg
namegen/: __main__.py  args.py
namegen/common/: registry.py
namegen/generators/: __init__.py  base_generator.py  generator_registry.py  nltk_synonym_generator.py
