[metadata]
name = namegen
version = 0.0.1
author = fuzzah
author_email = fuzzah@tuta.io
url = https://github.com/fuzzah/namegen

description = application to help you generate names
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Typing :: Typed
    Framework :: Pytest
    Framework :: tox

[options]
packages = find:
install_requires =
    nltk

[options.extras_require]
dev =
    bandit
    black
    build
    coverage
    pylint
    pytest
    pytest-mock
    rope
    tox
    wheel

[options.entry_points]
console_scripts =
    namegen = namegen.__main__:main

[coverage:run]
source =
    namegen/
omit =
    */tests/*
branch = True

[coverage:report]
skip_empty = True
